  * Update handling of "Ready to install" etc. templates to account for the
    removal of the separate welcome page.
  * KDE frontend:
    - Hide install_process_label ("installation process") and
      breadcrumb_install ("Install") when running as oem-config; providing
      alternative strings would break string freeze, and the UI should look
      OK without them (LP: #540929).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 07 Apr 2010 09:45:37 +0100

ubiquity (2.2.15) lucid; urgency=low

  [ Evan Dandrea ]
  * Move the install window color setting code closer to when the window
    is shown, so the colors don't get reset before then.
  * Fix alpha warning being shown all the time with recent changes to
    the KDE frontend.
  * Define allowed_change_step in the KDE frontend to fix the manual
    partitioner buttons not working (LP: #556180).
  * Do not show the 'ready to install' or alpha warning text in the KDE
    frontend when in oem-config mode (LP: #556577).
  * Update timezone images to cover changes to the Russian timezones and
    make further adjustments around UTC+5, UTC+5.5, and UTC+7
    (LP: #368060).
  * Automatic update of included source packages: grub-installer
    1.49ubuntu11.

  [ Jonathan Riddell ]
  * Workaround PyQt unicode encoding error in ubi-console-setup.py, (LP: #556436)

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 06 Apr 2010 17:29:17 +0100

ubiquity (2.2.14) lucid; urgency=low

  [ Jonathan Riddell ]
  * Update Kubuntu icon desktop/hi*-app-ubiquity.png for new logo

  [ Mario Limonciello ]
  * Don't bail out if oem-config/remove_extras doesn't exist yet since
    oem-config isn't actually installed. (LP: #554324, LP: #554664)

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 03 Apr 2010 15:20:32 -0500

ubiquity (2.2.13) lucid; urgency=low

  [ Evan Dandrea ]
  * In oem-config, support removing packages that were not part of the
    base install and are not needed in the final system by preseeding